--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nya.miku.wishmaster"
-    android:versionCode="3"
-    android:versionName="0.9.2" >
+    android:versionCode="4"
+    android:versionName="0.9.3" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -55,6 +55,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="hatsune.ru" />
                 <data android:host="410chan.org" />
                 <data android:host="4chan.org" />
+                <data android:host="boards.4chan.org" />
                 <data android:host="krautchan.net" />
                 <data android:host="2ch.hk" />
                 <data android:host="2ch.pm" />
