--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,6 +62,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="inach.org" />
                 <data android:host="www.inach.org" />
                 
+                <data android:host="owlchan.ru" />
+                <data android:host="www.owlchan.ru" />
+                
+                <data android:host="chuck.dfwk.ru" />
+                
                 <data android:host="4chan.org" />
                 <data android:host="www.4chan.org" />
                 <data android:host="boards.4chan.org" />
