--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -59,6 +59,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="nowere.net" />
                 <data android:host="www.nowere.net" />
                 
+                <data android:host="2-chru.net" />
+                <data android:host="2chru.net" />
+                <data android:host="dmirrgetyojz735v.onion" />
+                <data android:host="www.2-chru.net" />
+                <data android:host="www.2chru.net" />
+                <data android:host="www.dmirrgetyojz735v.onion" />
+                
                 <data android:host="inach.org" />
                 <data android:host="www.inach.org" />
                 
