hi-res markup buttons; acra (crash reports) dialog; bug fixes

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -152,6 +152,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity android:name="nya.miku.wishmaster.ui.settings.PreferencesActivity" />
         <activity android:name="nya.miku.wishmaster.ui.settings.AutohideActivity" />
         
+        <activity
+            android:name="org.acra.CrashReportDialog"
+            android:theme="@style/Theme_Dialog_Switch"
+            android:launchMode="singleInstance"
+            android:excludeFromRecents="true"
+            android:finishOnTaskLaunch="true" />
+        
         <service android:name="nya.miku.wishmaster.ui.posting.PostingService" />
         <service android:name="nya.miku.wishmaster.ui.downloading.DownloadingService" />
         <service android:name="nya.miku.wishmaster.ui.tabs.TabsTrackerService" />
