--- a/data/build.gradle
+++ b/data/build.gradle
@@ -3,14 +3,24 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
 apply plugin: 'android'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-v4:22.1.0'
+    compile 'ch.acra:acra:4.5.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'org.apache.httpcomponents:httpmime:4.3.5'
+    compile 'com.esotericsoftware:kryo:3.0.1'
+    compile 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 }
 
 android {
