--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -93,6 +93,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="krautchan.net" />
                 <data android:host="www.krautchan.net" />
                 
+                <data android:host="7chan.org" />
+                
                 <data android:host="dobrochan.ru" />
                 <data android:host="dobrochan.com" />
                 <data android:host="dobrochan.org" />
