handle share intent

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -163,6 +163,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity android:name="nya.miku.wishmaster.ui.settings.PreferencesActivity" />
         <activity android:name="nya.miku.wishmaster.ui.settings.AutohideActivity" />
         
+        <activity android:name="nya.miku.wishmaster.ui.ShareActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
+                <data android:mimeType="video/*" />
+            </intent-filter>
+        </activity>
+        
         <activity
             android:name="org.acra.CrashReportDialog"
             android:theme="@style/Theme_Dialog_Switch"
