fixed 4chan recaptcha

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nya.miku.wishmaster"
-    android:versionCode="21"
-    android:versionName="1.0.6" >
+    android:versionCode="22"
+    android:versionName="1.0.7" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -164,12 +164,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity android:name="nya.miku.wishmaster.ui.settings.AutohideActivity" />
         
         <activity android:name="nya.miku.wishmaster.ui.ShareActivity" >
-            <intent-filter>
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="image/*" />
                 <data android:mimeType="video/*" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
         
         <activity
