--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -114,6 +114,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="2ch.tf" />
                 <data android:host="2ch.wf" />
                 <data android:host="2ch.yt" />
+                
+                <data android:host="arhivach.org" />
+                <data android:host="www.arhivach.org" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
