--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -167,12 +167,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity android:name="nya.miku.wishmaster.ui.settings.AutohideActivity" />
         
         <activity android:name="nya.miku.wishmaster.ui.ShareActivity" >
-            <!-- <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="image/*" />
                 <data android:mimeType="video/*" />
-            </intent-filter> -->
+            </intent-filter>
         </activity>
         
         <activity
