--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -99,6 +99,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="lainchan.org" />
                 <data android:host="www.lainchan.org" />
                 
+                <data android:host="0chan.cc" />
+                <data android:host="www.0chan.cc" />
+                
+                <data android:host="tohno-chan.com" />
+                <data android:host="www.tohno-chan.com" />
+                
                 <data android:host="dobrochan.ru" />
                 <data android:host="dobrochan.com" />
                 <data android:host="dobrochan.org" />
