0-chan.ru support

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -102,6 +102,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="0chan.cc" />
                 <data android:host="www.0chan.cc" />
                 
+                <data android:host="0-chan.ru" />
+                <data android:host="www.0-chan.ru" />
+                
                 <data android:host="tohno-chan.com" />
                 <data android:host="www.tohno-chan.com" />
                 
