--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="nowere.net" />
                 <data android:host="www.nowere.net" />
                 
+                <data android:host="420chan.org" />
+                <data android:host="boards.420chan.org" />
+                
                 <data android:host="2-chru.net" />
                 <data android:host="2chru.net" />
                 <data android:host="dmirrgetyojz735v.onion" />
