uchan.to support

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -70,6 +70,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="www.2chru.net" />
                 <data android:host="www.dmirrgetyojz735v.onion" />
                 
+                <data android:host="uchan.to" />
+                <data android:host="uchan.org.ua" />
+                
                 <data android:host="sich.co.ua" />
                 
                 <data android:host="syn-ch.com" />
