--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -113,6 +113,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="0-chan.ru" />
                 <data android:host="www.0-chan.ru" />
                 
+                <data android:host="02ch.su" />
+                
                 <data android:host="tohno-chan.com" />
                 <data android:host="www.tohno-chan.com" />
                 
