--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -184,6 +184,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity android:name="nya.miku.wishmaster.lib.FileDialogActivity" />
         <activity android:name="nya.miku.wishmaster.ui.settings.PreferencesActivity" />
         <activity android:name="nya.miku.wishmaster.ui.settings.AutohideActivity" />
+        <activity android:name="nya.miku.wishmaster.ui.settings.ChansSortActivity" />
         
         <activity android:name="nya.miku.wishmaster.ui.ShareActivity" >
             <intent-filter>
