--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,10 +17,12 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
     package="nya.miku.wishmaster"
+    android:installLocation="auto"
+    tools:ignore="UnusedAttribute"
     android:versionCode="25"
-    android:versionName="1.1.2" >
+    android:versionName="1.1.2">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
