--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="www.410chan.org" />
                 <data android:host="nowere.net" />
                 <data android:host="www.nowere.net" />
+                <data android:host="owlchan.ru" />
+                <data android:host="www.owlchan.ru" />
                 
                 <data android:host="420chan.org" />
                 <data android:host="boards.420chan.org" />
@@ -85,8 +87,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="inach.org" />
                 <data android:host="www.inach.org" />
                 
-                <data android:host="owlchan.ru" />
-                <data android:host="www.owlchan.ru" />
+                <data android:host="claire.ws" />
+                <data android:host="www.claire.ws" />
                 
                 <data android:host="chuck.dfwk.ru" />
                 
