--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,8 +21,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     package="nya.miku.wishmaster"
     android:installLocation="auto"
     tools:ignore="UnusedAttribute"
-    android:versionCode="30"
-    android:versionName="1.2.0">
+    android:versionCode="31"
+    android:versionName="1.2.1">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -123,6 +123,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 
                 <data android:host="tohno-chan.com" />
                 <data android:host="www.tohno-chan.com" />
+                
+                <data android:host="76chan.org" />
+                <data android:host="www.76chan.org" />
                 
                 <data android:host="dobrochan.ru" />
                 <data android:host="dobrochan.com" />
