--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -117,6 +117,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 
                 <data android:host="7chan.org" />
                 
+                <data android:host="wakachan.org" />
+                <data android:host="www.wakachan.org" />
+                
                 <data android:host="pl.vichan.net" />
 
                 <data android:host="lainchan.org" />
