--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,7 @@ dependencies {
     compile 'com.android.support:support-v4:22.1.0'
     compile 'ch.acra:acra:4.5.0'
     compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'org.apache.httpcomponents:httpmime:4.3.5'
+    compile 'cz.msebera.android:httpclient:4.3.6'
     compile 'com.esotericsoftware:kryo:3.0.1'
     compile 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 }
