--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 dependencies {
     compile 'com.android.support:support-v4:22.2.1'
-    compile 'ch.acra:acra:4.5.0'
+    compile 'ch.acra:acra:4.7.0-RC.2'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'cz.msebera.android:httpclient:4.3.6'
     compile 'com.esotericsoftware:kryo:3.0.3'
