--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ android {
         assets.srcDirs = ['assets']
         jni.srcDirs = ['jni']
     }
+    buildTypes.release {
+        minifyEnabled true
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
+    }
     defaultConfig.ndk {
         moduleName "gif"
     }
