--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,8 +21,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     package="nya.miku.wishmaster"
     android:installLocation="auto"
     tools:ignore="UnusedAttribute"
-    android:versionCode="44"
-    android:versionName="1.3.8">
+    android:versionCode="45"
+    android:versionName="1.3.9">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -36,6 +36,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <application
         android:name="nya.miku.wishmaster.common.MainApplication"
         android:allowBackup="true"
+        android:supportsRtl="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         
