--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -103,6 +103,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="claire.ws" />
                 <data android:host="www.claire.ws" />
                 
+                <data android:host="kurisa.ch" />
+                <data android:host="www.kurisa.ch" />
+                
                 <data android:host="10ch.ru" />
                 <data android:host="www.10ch.ru" />
                 
