--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -133,6 +133,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="www.wakachan.org" />
                 
                 <data android:host="pl.vichan.net" />
+                <data android:host="samachan.org" />
+                <data android:host="www.samachan.org" />
 
                 <data android:host="lainchan.org" />
                 <data android:host="www.lainchan.org" />
