--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -150,7 +150,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <data android:host="www.0chan.cc" />
                 
                 <data android:host="0chan.eu" />
-                <data android:host="www.0chan.cc" />
+                <data android:host="www.0chan.eu" />
                 
                 <data android:host="0-chan.ru" />
                 <data android:host="www.0-chan.ru" />
