Share selected text & reply with shared text

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -254,6 +254,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="image/*" />
                 <data android:mimeType="video/*" />
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
         
