--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,21 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'ch.acra:acra:4.7.0-RC.2'
-    compile 'org.apache.commons:commons-lang3:3.4'
-    compile 'cz.msebera.android:httpclient:4.3.6'
+    compile 'org.apache.commons:commons-lang3:3.5'
+    compile 'cz.msebera.android:httpclient:4.4.1.2'
     compile 'com.esotericsoftware:kryo:3.0.3'
     compile 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
 }
